fixed bugs and added div to display book on webpage

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <input type='checkbox' id='read'>
         <input type='submit' value='Add Book'>
     </form>
+    <div id='library'></div>
     <script src='scripts.js'></script>
 </body>
 </html>
